[gd_scene load_steps=2 format=3 uid="uid://m4700b26gge1"]

[ext_resource type="Script" path="res://addons/stats_progression_json_importer/damage_previewer.gd" id="1_6yaio"]

[node name="DamagePreviewer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_6yaio")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Attacker"

[node name="AttackerOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 9
selected = 0
popup/item_0/text = "bug"
popup/item_0/id = 0
popup/item_1/text = "crow"
popup/item_1/id = 1
popup/item_2/text = "duck_strong"
popup/item_2/id = 2
popup/item_3/text = "duck_weak"
popup/item_3/id = 3
popup/item_4/text = "lizard"
popup/item_4/id = 4
popup/item_5/text = "mouse"
popup/item_5/id = 5
popup/item_6/text = "parrot_blue"
popup/item_6/id = 6
popup/item_7/text = "parrot_yellow"
popup/item_7/id = 7
popup/item_8/text = "player"
popup/item_8/id = 8

[node name="AttackerLvlSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 9.0
value = 1.0
update_on_text_changed = true
prefix = "LVL"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TargetLabeL" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "Target"

[node name="TargetOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 9
selected = 0
popup/item_0/text = "bug"
popup/item_0/id = 0
popup/item_1/text = "crow"
popup/item_1/id = 1
popup/item_2/text = "duck_strong"
popup/item_2/id = 2
popup/item_3/text = "duck_weak"
popup/item_3/id = 3
popup/item_4/text = "lizard"
popup/item_4/id = 4
popup/item_5/text = "mouse"
popup/item_5/id = 5
popup/item_6/text = "parrot_blue"
popup/item_6/id = 6
popup/item_7/text = "parrot_yellow"
popup/item_7/id = 7
popup/item_8/text = "player"
popup/item_8/id = 8

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "REFRESH FIGHTERS"

[node name="CalculateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CALCULATE"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.794386, 9.30367e-05, 5.10186e-05, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="DmgTable" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 10
column_titles_visible = true
allow_search = false
hide_folding = true
hide_root = true
select_mode = 1

[connection signal="item_selected" from="VBoxContainer/HBoxContainer3/HBoxContainer3/HBoxContainer/AttackerOptionButton" to="." method="_on_attacker_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/HBoxContainer3/HBoxContainer/AttackerLvlSpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer3/HBoxContainer2/TargetOptionButton" to="." method="_on_target_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CalculateButton" to="." method="_on_calculate_button_pressed"]
